NTP stop function to wait for actual process to stop
This issue has been fixed upstream (but not available on Ubuntu 14.04 as of 2017-11-22):
https://anonscm.debian.org/git/pkg-ntp/pkg-ntp.git/commit/debian/ntp.init?id=7849944135f676d11a83f1ce0b34f5b27165db1b

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,6 +13,11 @@
   when: ansible_os_family == 'Debian'
   tags: [ 'package', 'ntp' ]
 
+- name: Install an alternate init script for NTP
+  copy: src=etc_init.d_ntp dest=/etc/init.d/ntp mode=0755 owner=root group=root
+  when: ansible_os_family == 'Debian'
+  tags: [ 'package', 'ntp' ]
+
 - name: Copy the ntp.conf template file
   template: src=ntp.conf.j2 dest=/etc/ntp.conf
   notify:
